--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 81 columns):\n",
+      "Id               1460 non-null int64\n",
+      "MSSubClass       1460 non-null int64\n",
+      "MSZoning         1460 non-null object\n",
+      "LotFrontage      1201 non-null float64\n",
+      "LotArea          1460 non-null int64\n",
+      "Street           1460 non-null object\n",
+      "Alley            91 non-null object\n",
+      "LotShape         1460 non-null object\n",
+      "LandContour      1460 non-null object\n",
+      "Utilities        1460 non-null object\n",
+      "LotConfig        1460 non-null object\n",
+      "LandSlope        1460 non-null object\n",
+      "Neighborhood     1460 non-null object\n",
+      "Condition1       1460 non-null object\n",
+      "Condition2       1460 non-null object\n",
+      "BldgType         1460 non-null object\n",
+      "HouseStyle       1460 non-null object\n",
+      "OverallQual      1460 non-null int64\n",
+      "OverallCond      1460 non-null int64\n",
+      "YearBuilt        1460 non-null int64\n",
+      "YearRemodAdd     1460 non-null int64\n",
+      "RoofStyle        1460 non-null object\n",
+      "RoofMatl         1460 non-null object\n",
+      "Exterior1st      1460 non-null object\n",
+      "Exterior2nd      1460 non-null object\n",
+      "MasVnrType       1452 non-null object\n",
+      "MasVnrArea       1452 non-null float64\n",
+      "ExterQual        1460 non-null object\n",
+      "ExterCond        1460 non-null object\n",
+      "Foundation       1460 non-null object\n",
+      "BsmtQual         1423 non-null object\n",
+      "BsmtCond         1423 non-null object\n",
+      "BsmtExposure     1422 non-null object\n",
+      "BsmtFinType1     1423 non-null object\n",
+      "BsmtFinSF1       1460 non-null int64\n",
+      "BsmtFinType2     1422 non-null object\n",
+      "BsmtFinSF2       1460 non-null int64\n",
+      "BsmtUnfSF        1460 non-null int64\n",
+      "TotalBsmtSF      1460 non-null int64\n",
+      "Heating          1460 non-null object\n",
+      "HeatingQC        1460 non-null object\n",
+      "CentralAir       1460 non-null object\n",
+      "Electrical       1459 non-null object\n",
+      "1stFlrSF         1460 non-null int64\n",
+      "2ndFlrSF         1460 non-null int64\n",
+      "LowQualFinSF     1460 non-null int64\n",
+      "GrLivArea        1460 non-null int64\n",
+      "BsmtFullBath     1460 non-null int64\n",
+      "BsmtHalfBath     1460 non-null int64\n",
+      "FullBath         1460 non-null int64\n",
+      "HalfBath         1460 non-null int64\n",
+      "BedroomAbvGr     1460 non-null int64\n",
+      "KitchenAbvGr     1460 non-null int64\n",
+      "KitchenQual      1460 non-null object\n",
+      "TotRmsAbvGrd     1460 non-null int64\n",
+      "Functional       1460 non-null object\n",
+      "Fireplaces       1460 non-null int64\n",
+      "FireplaceQu      770 non-null object\n",
+      "GarageType       1379 non-null object\n",
+      "GarageYrBlt      1379 non-null float64\n",
+      "GarageFinish     1379 non-null object\n",
+      "GarageCars       1460 non-null int64\n",
+      "GarageArea       1460 non-null int64\n",
+      "GarageQual       1379 non-null object\n",
+      "GarageCond       1379 non-null object\n",
+      "PavedDrive       1460 non-null object\n",
+      "WoodDeckSF       1460 non-null int64\n",
+      "OpenPorchSF      1460 non-null int64\n",
+      "EnclosedPorch    1460 non-null int64\n",
+      "3SsnPorch        1460 non-null int64\n",
+      "ScreenPorch      1460 non-null int64\n",
+      "PoolArea         1460 non-null int64\n",
+      "PoolQC           7 non-null object\n",
+      "Fence            281 non-null object\n",
+      "MiscFeature      54 non-null object\n",
+      "MiscVal          1460 non-null int64\n",
+      "MoSold           1460 non-null int64\n",
+      "YrSold           1460 non-null int64\n",
+      "SaleType         1460 non-null object\n",
+      "SaleCondition    1460 non-null object\n",
+      "SalePrice        1460 non-null int64\n",
+      "dtypes: float64(3), int64(35), object(43)\n",
+      "memory usage: 924.0+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "df.info()"
    ]
   },
   {
@@ -99,20 +193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load necessary packages\n",
-    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.linear_model import Lasso, Ridge, LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# remove \"object\"-type features and SalesPrice from `X`\n",
-    "\n",
+    "features = [col for col in df.columns if df[col].dtype in [np.float64, np.int64] and col!='SalePrice']\n",
+    "X = df[features]\n",
     "\n",
     "# Impute null values\n",
+    "for col in X:\n",
+    "    med = X[col].median()\n",
+    "    X[col].fillna(value = med, inplace = True)\n",
     "\n",
-    "\n",
-    "# Create y\n"
+    "# Create y\n",
+    "y = df.SalePrice\n"
    ]
   },
   {
@@ -124,10 +228,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 37 columns):\n",
+      "Id               1460 non-null int64\n",
+      "MSSubClass       1460 non-null int64\n",
+      "LotFrontage      1460 non-null float64\n",
+      "LotArea          1460 non-null int64\n",
+      "OverallQual      1460 non-null int64\n",
+      "OverallCond      1460 non-null int64\n",
+      "YearBuilt        1460 non-null int64\n",
+      "YearRemodAdd     1460 non-null int64\n",
+      "MasVnrArea       1460 non-null float64\n",
+      "BsmtFinSF1       1460 non-null int64\n",
+      "BsmtFinSF2       1460 non-null int64\n",
+      "BsmtUnfSF        1460 non-null int64\n",
+      "TotalBsmtSF      1460 non-null int64\n",
+      "1stFlrSF         1460 non-null int64\n",
+      "2ndFlrSF         1460 non-null int64\n",
+      "LowQualFinSF     1460 non-null int64\n",
+      "GrLivArea        1460 non-null int64\n",
+      "BsmtFullBath     1460 non-null int64\n",
+      "BsmtHalfBath     1460 non-null int64\n",
+      "FullBath         1460 non-null int64\n",
+      "HalfBath         1460 non-null int64\n",
+      "BedroomAbvGr     1460 non-null int64\n",
+      "KitchenAbvGr     1460 non-null int64\n",
+      "TotRmsAbvGrd     1460 non-null int64\n",
+      "Fireplaces       1460 non-null int64\n",
+      "GarageYrBlt      1460 non-null float64\n",
+      "GarageCars       1460 non-null int64\n",
+      "GarageArea       1460 non-null int64\n",
+      "WoodDeckSF       1460 non-null int64\n",
+      "OpenPorchSF      1460 non-null int64\n",
+      "EnclosedPorch    1460 non-null int64\n",
+      "3SsnPorch        1460 non-null int64\n",
+      "ScreenPorch      1460 non-null int64\n",
+      "PoolArea         1460 non-null int64\n",
+      "MiscVal          1460 non-null int64\n",
+      "MoSold           1460 non-null int64\n",
+      "YrSold           1460 non-null int64\n",
+      "dtypes: float64(3), int64(34)\n",
+      "memory usage: 422.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,8 +307,11 @@
     "from sklearn.metrics import mean_squared_error, mean_squared_log_error\n",
     "\n",
     "# Split in train and test\n",
-    "\n",
-    "# Fit the model and print R2 and MSE for train and test\n"
+    "X_train , X_test, y_train, y_test = train_test_split(X, y)\n",
+    "# Fit the model and print R2 and MSE for train and test\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "lr.score(X_Train, y_train), lr.score()"
    ]
   },
   {
@@ -447,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
