--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error, mean_squared_log_error\n",
+    "from sklearn.metrics import mean_squared_error, mean_squared_log_error as mse, msle\n",
     "\n",
     "# Split in train and test\n",
     "X_train , X_test, y_train, y_test = train_test_split(X, y)\n",
