Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
     "# Fit the model and print R2 and MSE for train and test\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
-    "lr.score(X_Train, y_train), lr.score(X_test, y_test), mse(X_Train, y_train), mse"
+    "lr.score(X_Train, y_train), lr.score(X_test, y_test), mse(y_train, lr.), mse"
    ]
   },
   {
