Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,8 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_squared_error, mean_squared_log_error as mse, msloge\n",
+    "from sklearn.metrics import mean_squared_error  as mse, msloge\n",
+    "mean_squared_log_error\n",
     "\n",
     "# Split in train and test\n",
     "X_train , X_test, y_train, y_test = train_test_split(X, y)\n",
