Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
+    "from sklearn import preprocessing as pp\n",
     "\n",
     "# Scale the data and perform train test split\n",
     "\n"
