--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,8 @@
     "from sklearn import preprocessing as pp\n",
     "\n",
     "# Scale the data and perform train test split\n",
-    "\n"
+    "X_scaled = pp.scale(X)\n",
+    "X_train , X_test, y_train, y_test = train_test_split(X_scaled, y)"
    ]
   },
   {
