Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,11 +362,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8104597325838159,\n",
+       " 0.8127148144123655,\n",
+       " 1193998335.9241648,\n",
+       " 1184957286.0234091)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "lr.fit(X_train, y_train)\n",
+    "lr.score(X_train, y_train), lr.score(X_test, y_test), mse(y_train, lr.predict(X_train)), mse(y_test, lr.predict(X_test))"
    ]
   },
   {
