Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create X_cat which contains only the categorical variables"
+    "# Create X_cat which contains only the categorical variables\n",
+    "X_cat = [col for col in df.columns if df[col].dtype in [object] and col!='SalePrice']"
    ]
   },
   {
