Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
    "outputs": [],
    "source": [
     "# Create X_cat which contains only the categorical variables\n",
-    "X_cat = [col for col in df.columns if df[col].dtype in [object] and col!='SalePrice']"
+    "X_cat = [col for col in df.columns if df[col].dtype in [np.object]]"
    ]
   },
   {
