--- a/index.ipynb
+++ b/index.ipynb
@@ -401,12 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create X_cat which contains only the categorical variables\n",
-    "X_cat = [col for col in df.columns if df[col].dtype in [np.object]]"
+    "features_cat = [col for col in df.columns if df[col].dtype in [np.object]]\n",
+    "X_cat = df[features_cat]"
    ]
   },
   {
