Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,11 +412,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make dummies\n"
+    "# Make dummies\n",
+    "X_cat = pd.get_dummies(X_cat)"
    ]
   },
   {
