--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "X_all = pd.concat([])"
    ]
   },
   {
