--- a/index.ipynb
+++ b/index.ipynb
@@ -429,12 +429,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "X_all = pd.concat([])"
+    "X_all = pd.concat([pd.DataFrame(X_scaled), X_cat], axis=1)"
    ]
   },
   {
