Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -447,25 +447,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8104597325838159,\n",
-       " 0.8127148144123655,\n",
-       " 1193998335.9241648,\n",
-       " 1184957286.0234091)"
+       "(0.9475207375255522,\n",
+       " -1.844261493476863e+18,\n",
+       " 334500606.9610588,\n",
+       " 1.122643397598125e+28)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
+    "X_train , X_test, y_train, y_test = train_test_split(X_all, y)\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
     "lr.score(X_train, y_train), lr.score(X_test, y_test), mse(y_train, lr.predict(X_train)), mse(y_test, lr.predict(X_test))"
