--- a/index.ipynb
+++ b/index.ipynb
@@ -513,7 +513,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "lasso = Lasso(alpha=1)"
    ]
   },
   {
