--- a/index.ipynb
+++ b/index.ipynb
@@ -514,7 +514,9 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "lasso = Lasso(alpha=1)"
+    "lasso = Lasso(alpha=1)\n",
+    "lasso.fit(X_train)\n",
+    "lr.score(X_train, y_train), lr.score(X_test, y_test), mse(y_train, lr.predict(X_train)), mse(y_test, lr.predict(X_test))"
    ]
   },
   {
