Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -509,14 +509,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9451305534863792, 0.8224864981040028, 349735539.27820647, 1080564559.813945)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "lasso = Lasso(alpha=1)\n",
-    "lasso.fit(X_train)\n",
-    "lr.score(X_train, y_train), lr.score(X_test, y_test), mse(y_train, lr.predict(X_train)), mse(y_test, lr.predict(X_test))"
+    "lasso.fit(X_train, y_train)\n",
+    "lasso.score(X_train, y_train), lasso.score(X_test, y_test), mse(y_train, lasso.predict(X_train)), mse(y_test, lasso.predict(X_test))"
    ]
   },
   {
