--- a/index.ipynb
+++ b/index.ipynb
@@ -539,11 +539,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9427995817492032, 0.8379302050454052, 364593054.8782795, 986555246.6361264)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "lasso = Lasso(alpha=10)\n",
+    "lasso.fit(X_train, y_train)\n",
+    "lasso.score(X_train, y_train), lasso.score(X_test, y_test), mse(y_train, lasso.predict(X_train)), mse(y_test, lasso.predict(X_test))"
    ]
   },
   {
