Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -580,7 +580,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "ridge = Ridge(alpha=1)\n",
+    "ridge.fit(X_train, y_train)\n",
+    "ridge.score(X_train, y_train), ridge.score(X_test, y_test), mse(y_train, ridge.predict(X_train)), mse(y_test, ridge.predict(X_test))"
    ]
   },
   {
