Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -576,9 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9257169617286277, 0.8721686956418331, 473476954.8406669, 778137863.5927854)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "ridge = Ridge(alpha=1)\n",
@@ -595,11 +606,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.896677884505482, 0.8938083356244978, 658570809.0361384, 646412514.238232)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "ridge = Ridge(alpha=10)\n",
+    "ridge.fit(X_train, y_train)\n",
+    "ridge.score(X_train, y_train), ridge.score(X_test, y_test), mse(y_train, ridge.predict(X_train)), mse(y_test, ridge.predict(X_test))"
    ]
   },
   {
