--- a/index.ipynb
+++ b/index.ipynb
@@ -654,7 +654,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# number of Ridge params almost zero"
+    "# number of Ridge params almost zero\n",
+    "sum(abs(ridge.coef_))"
    ]
   },
   {
