Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -650,9 +650,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1211282.6335504865"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# number of Ridge params almost zero\n",
     "sum(abs(ridge.coef_))"
@@ -660,11 +671,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3001577.0091725187"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# number of Lasso params almost zero"
+    "# number of Lasso params almost zero\n",
+    "sum(abs(lasso.coef_))"
    ]
   },
   {
